# rust-pixelator

./: Cargo.toml  README.md
src/: main.rs  pixelate.rs
