[package]
name = "rust-pixelator"
version = "0.1.0"
authors = ["MyYogurt <40012201+MyYogurt@users.noreply.github.com>"]
edition = "2018"

[profile.dev]
opt-level = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
image = "0.23.12"
imagesize = "0.8.8"